Revision history for Games-Solitaire-Verify

        - Add the script/tag-release.pl to tag a release in Subversion.
        - Add script/bump-version-number.pl .
        - lib/Games/Solitaire/Verify/Card.pm :
            - Add the id() slot.
            - Add the data() slot.

0.0901  Thu Jun  2 21:24:24 IDT 2011
        - Now importing Dumper from Data::Dumper properly.

0.09    Sat Jul 10 12:28:47 IDT 2010
        - Converted from Class-Accessor to Class-XSAccessor (with a function
        emulating mk_accessors for convenience.).
            - This made the test suite run faster.
        - Add the script/verify-solitaire-solution and 
        lib/Games/Solitaire/Verify/App/CmdLine.pm .

0.08    Sat Jul  4 11:24:29 IDT 2009
        - Removed the "all rights reserved" language. I was told it is
        incompatible with the MIT/X11 License.
        - Added the COPYING file.

0.07    Mon Jun 22 23:37:01 IDT 2009
        - Added some meta-data (repository, homepage, mailing list and 
        keywords) to META.yml.
        - Implemented many missing exceptions.
            - Added tests for some of them.

0.06    Sat May 30 15:56:13 IDT 2009
        - Now the module can verify Simple Simon moves and solutions. 
            - The support has many loose ends including many non-existent 
            exceptions, but it should still yield a true verdict 
            if-and-only-if the solution is correct.

0.05    Sat Jan 24 21:33:30 IST 2009
        - Made sure that when unlimited sequence move takes place, it isn't
        affected by kings_only, etc. I.e: it always allows to move an
        arbitrary number of cards when it is specified.
            - Bug discovered based on this post by larrysan:
            - http://tech.groups.yahoo.com/group/fc-solve-discuss/message/856

0.04    Thu Aug  7 20:36:14 IDT 2008
        - Now verify_and_perform_move in Games::Solitaire::Verify::State
        is returning objects of exception classes, instead of stringified